# autonomous-doc-multi-agent

./: .gitignore  README.md  pyproject.toml
backend/src/agent/: graph.py  nodes.py  prompts.py  state.py
backend/src/api/: main.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: InputSection.jsx  MarkdownPreview.jsx  Terminal.jsx
